--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -1,5 +1,5 @@
-<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
-                  xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ListPreference
         android:defaultValue="0"
@@ -19,5 +19,6 @@
         android:selectAllOnFocus="true"
         android:singleLine="true"
         android:title="@string/pref_account_name"/>
+
 
 </PreferenceScreen>
